combined fossa and streamelements cards to make room for mod view

--- a/index.html
+++ b/index.html
@@ -63,9 +63,7 @@
                 <li>🏠 <strong>Maintain</strong> a fun, safe environment</li>
             </ul>
             <div style="margin-top: 20px;">
-                <span class="community-heart">💖</span>
                 <span style="font-style: italic;">Remember: You serve the community first!</span>
-                <span class="community-heart">💖</span>
             </div>
         </div>
 
@@ -98,13 +96,13 @@
             <div class="tools-grid">
                 <div class="tool-card">
                     <div style="font-size: 2em;">🤖</div>
-                    <h3>Fossabot</h3>
+                    <h3>Fossabot & StreamElements</h3>
                     <p>Commands & Auto-mod</p>
                 </div>
                 <div class="tool-card">
-                    <div style="font-size: 2em;">⚡</div>
-                    <h3>StreamElements</h3>
-                    <p>Advanced Features</p>
+                    <div style="font-size: 2em;">🔧</div>
+                    <h3>Twitch Mod View</h3>
+                    <p>Advanced Moderation Dashboard</p>
                 </div>
                 <div class="tool-card">
                     <div style="font-size: 2em;">💬</div>
