small /timeout adjustment

--- a/index.html
+++ b/index.html
@@ -123,8 +123,9 @@
             <h2>Basic Twitch Mod Commands</h2>
             <img src="https://cdn.7tv.app/emote/01F91TRE3G00030TA5GZWNZKQA/4x.webp" alt="Commands" class="emoji-large">
             <div class="command-box">
-                <strong>/timeout [username] [seconds]</strong><br>
-                Temporarily silence a user (1-1209600 seconds)
+                <strong>/timeout [username] [time]</strong><br>
+                Temporarily silence a user (1s-2w)<br>
+                <span style="font-size: 0.9em; color: #cccccc;">Formats: 30s, 5m, 1h, 1d, 2w (max 2 weeks)</span>
             </div>
             <div class="command-box">
                 <strong>/ban [username]</strong><br>
