--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </div>
             </div>
             <p style="font-size: 1.2em; margin-top: 20px;">
-                You're not just a mod - you're a <span style="background: rgba(0, 0, 0, 0.7); color: #00ff88; padding: 4px 8px; border-radius: 8px; font-weight: bold; text-shadow: 0 0 10px rgba(0, 255, 136, 0.5);">community steward</span>!
+                You're not just a mod - you're someone the community looks up to!
             </p>
         </div>
 
@@ -63,7 +63,7 @@
                 <li>🏠 <strong>Maintain</strong> a fun, safe environment</li>
             </ul>
             <div style="margin-top: 20px;">
-                <span style="font-style: italic;">Remember: You serve the community first!</span>
+                <span style="font-style: italic;">🧠 Remember: You serve the community first!</span>
             </div>
         </div>
 
@@ -191,7 +191,7 @@
                 <ul style="text-align: left; margin-top: 15px;">
                     <li>✨ <strong>Better chat visibility</strong> - See messages clearly</li>
                     <li>🎨 <strong>Custom highlighting</strong> - Spot important messages</li>
-                    <li>🔧 <strong>Mod tools integration</strong> - Right-click to moderate</li>
+                    <li>🔧 <strong>Mod tools integration</strong> - Left-click to moderate</li>
                     <li>📱 <strong>Multiple chats</strong> - Monitor several channels</li>
                     <li>🚀 <strong>Faster performance</strong> - No browser lag</li>
                     <li>🎯 <strong>User tracking</strong> - See user history quickly</li>
@@ -266,7 +266,7 @@
                 </ul>
             </div>
             <div style="margin-top: 20px; font-size: 1.3em;">
-                <strong>Remember: Community First, Always!</strong>
+                <strong>🧠 Remember: Community First, Always!</strong>
             </div>
         </div>
 
@@ -314,10 +314,8 @@
         </div>
     </div>
 
-    <div class="navigation">
-        <button class="nav-btn" id="prevBtn" onclick="changeSlide(-1)">◀ Previous</button>
-        <button class="nav-btn" id="nextBtn" onclick="changeSlide(1)">Next ▶</button>
-    </div>
+    <button class="nav-btn" id="prevBtn" onclick="changeSlide(-1)">◀</button>
+    <button class="nav-btn" id="nextBtn" onclick="changeSlide(1)">▶</button>
 
     <script src="script.js"></script>
 </body>
