--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zoil's Channel - Moderator Training</title>
+    <link rel="icon" type="image/png" href="https://static-cdn.jtvnw.net/emoticons/v2/emotesv2_13502a3d60b941a4922fa4524cd36189/default/dark/3.0">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -31,7 +32,7 @@
             <img src="https://cdn.7tv.app/emote/01FH960E0G0006ZT4VSK1QS553/2x.webp" alt="Shield" class="emoji-large">
             <div style="display: flex; justify-content: space-around; align-items: center; margin: 20px 0;">
                 <div style="text-align: center;">
-                    <div style="font-size: 3em;">👮</div>
+                    <div style="font-size: 3em;">🛡️</div>
                     <p><strong>Guardian</strong><br>Protect the community</p>
                 </div>
                 <div style="text-align: center;">
